--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "^12.0.0",  
     "@modelcontextprotocol/sdk": "1.13.1",
     "uuid": "latest",
     "ws": "latest",
