--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "autoprefixer": "^10.4.21",
     "bun-types": "^1.2.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "tsup": "^8.4.0",
     "typescript": "^5.0.0"
   },
